Fixed errors related to Authorization.  Updated Property model, routes, and controllers.  Updated upload controller.
